--- a/Fernando Chaves Advocacia/css/index.css
+++ b/Fernando Chaves Advocacia/css/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Trirong:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
 
 .img-fundo{
     background: url("/images/dama-da-lei.webp");
@@ -27,7 +28,7 @@ header h1{
     background-size: cover;
     position: absolute;
     opacity: 0.2;
-    height: 150%;
+    height: 185%;
 }
 .div-header{
     position: relative;
@@ -37,13 +38,14 @@ header h1{
 }
 .div-header ul{
     margin: 20px auto 0 auto;
-    width: 57%;
+    width: 72%;
 
 }
 .div-header li{
     display: inline;
     margin-left: 10px;
-    font-size: 2em;    
+    font-size: 2em;
+    font-family: 'Nanum Myeongjo', serif;
 }
 .div-header a{
     text-decoration: none;
@@ -89,9 +91,18 @@ header h1{
     display: inline-table;
     text-align: center;
     width: 30%;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 10px 1%;
+    font-size: 2em;
+    width: 30%;
+    height: 100px;
+    padding-top: 50px;
+    font-family: 'Nanum Myeongjo', serif;
+
 }
 .contato{
-    background-color: rgb(240, 236, 236);
+    background-color: #d6d6d6;
     height: 800px;
     padding: 1em;
     position: relative;
@@ -152,7 +163,8 @@ header h1{
     width: 200px;
     height: 50px;
     border-radius: 5px;
-    background-color: silver;
+    border: 5px solid #FEFEFE;
+    background-color: #FEFEFE;
     font-size: 1.2em;
 }
 .botao:hover{
@@ -176,15 +188,15 @@ header h1{
 }
 .zapzap-link{
     border: 5px solid #FEFEFE;
+    background-color: #FEFEFE;
     border-radius: 5px;
     margin-left: 37%;
     margin-top: 16%;
     width: 209px;
-    height: 267px;
+    height: 270px;
 }
 .zapzap-link:hover, .zapzap-link:hover h2{
     transition: 0.2s;
-    background-color: silver;
     color: gold;
 }
 .zapzap-link:active{
